@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. поиск модуля colorer_x64 на 64 битной системе
+	2. stack overflow из 1563 устранен для всех режимов фара (только win). Хак, но работает.
+
+#Revision: 1566
+	#Author: ctapmex Date: 2010-10-07 16:00:01 +0600 (Чт, 07 окт 2010)
 	1. 1563 проверено на x64 - небольшая поправка. На моих комьютерах как под x86, так и под x64 перестало
 	падать, строка просто не раскрашена до конца. !!НО , даный метод не работает если запустить x86 фар, 
 	на x64 операционке.  Адресация не та. Пока так.
